# immich-folder-album-creator

./: .gitignore  immich_auto_album.py  pyproject.toml
