[tool.poetry]
name = "immich-folder-album-creator"
version = "0.1.0"
description = ""
authors = ["Mondo <mondogao@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
urllib3 = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
